--- a/sousuo/image/sousuo.css
+++ b/sousuo/image/sousuo.css
@@ -3,7 +3,7 @@ html,body,div,span,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,address,big,cite,
 body{ font:normal 12px/24px "微软雅黑",'宋体'; background:#fff; color:#666;}
 ul li{ list-style:none;}
 img{ border:none; vertical-align:top;}
-a{text-decoration:none; color:#000;}
+a{text-decoration:none; color:#666;}
 .h10{ margin:0; padding:0; height:10px; line-height:10px; *height:10px;}
 .h20{ margin:0; padding:0; height:20px; line-height:20px; *height:20px;}
 .auto{ margin:0 auto;width:1390px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
@@ -88,6 +88,7 @@ em,i,u{font-style:normal}
 .selector .sl-b-selected .sl-b-key,.selector .sl-b-selected .sl-v-list{float:left}
 .selector .sl-v-logos li a:hover{text-decoration:none;color:#e4393c}
 .selector .sl-v-logos li a:hover img{display:none}
+/* class="selected"点击选择，然后加class*/
 .selector .sl-v-logos li.selected,.selector .sl-v-logos li:hover{position:relative;z-index:5;border-color:#e4393c;box-shadow:2px 2px 3px rgba(0,0,0,.12)}
 .selector .sl-v-logos li.selected a,.selector .sl-v-logos li:hover a{border-color:#e4393c}
 .selector .s-senior .sl-value{overflow:visible;padding-right:10px}
@@ -96,6 +97,7 @@ em,i,u{font-style:normal}
 .selector .sl-tab-trigger .trig-item{float:left;height:23px;line-height:23px;padding:0 3px 0 6px;border:1px solid #ddd;background:#fff;margin-right:15px}
 .selector .sl-tab-trigger .trig-item .text{color:#005aa0;display:inline-block;vertical-align:top}
 .selector .sl-tab-trigger .trig-item .arrow{display:inline-block;width:20px;height:20px;vertical-align:top;background:url(ds_hj_jl.png) no-repeat 4px 7px}
+/*选项卡位置头的的样式*/
 .selector .sl-tab-trigger .trig-item.trig-curr{height:24px;border-color:#999;border-bottom:medium none;text-decoration:none;position:relative;z-index:2}
 .selector .sl-tab-trigger .trig-item.trig-curr .arrow{background-position:4px -27px}
 .selector .sl-tab-cont-item{display:none;position:absolute;left:0;top:29px;width:1368px;border:1px solid #999;padding:10px;background:#fff;box-shadow:1px 1px 1px rgba(153,153,153,.3)}
@@ -106,7 +108,6 @@ em,i,u{font-style:normal}
 .selector .sl-tab-cont-item.z-senior-menu-multiple .btn-multiple{display:none}
 .selector .sl-tab-cont-item.z-senior-menu-multiple .btnbox{display:block}
 .selector .sl-tab-cont-item.multiple{border:2px solid #edd28b}
-
 .g-main2 {
     margin-bottom: 10px;
 }
@@ -140,7 +141,7 @@ em,i,u{font-style:normal}
 .filter .f-sort a.curr .fs-down .arrow-top,.filter .f-sort a.curr .fs-up .arrow-bottom{filter:alpha(opacity=50);-moz-opacity:.5;opacity:.5}
 .filter .f-sort a.curr:hover{color:#fff}
 .filter .f-price{position:relative;float:left;width:132px;height:25px;margin-right:12px}
-.filter .f-price .f-price-set{width:100%;height:100%;overflow:hidden}
+.filter .f-price .f-price-set{width:100%;height:100%;overflow:hidden;}
 .filter .f-price .f-price-set .input-txt,.filter .f-price .f-price-set em{float:left;display:inline}
 .filter .f-price .f-price-set .input-txt{width:52px;border-color:#ccc;color:#333}
 .filter .f-price .f-price-set .input-txt:focus{outline-color:transparent}
@@ -223,6 +224,11 @@ em,i,u{font-style:normal}
 .selector .multiple .sl-v-list li.selected a i{border-color:#e4393c;background-position:-1px -107px}
 
 
+/**/
+.p-detail, .p-img, .p-market, .p-name, .p-price {
+    overflow: hidden;
+}
+.footmark .may-like-list .p-name{line-height: 18px;}
 
 
 
